# compose

./: .gitignore  CMakeLists.txt  Procrustes.h  README.md  cmd.sh  compose.cpp  new.cpp  pos_comp.py  procrustes.cpp  run.sh  runfh.sh
enabled/: messi_keypoints.json  ronaldo_keypoints.json  rsharma2_keypoints.json  rsharma_keypoints.json  sachin_keypoints.json  vkohli_keypoints.json
pose_model/: defence.compose
